# APRK-OS

./: .gitignore  Cargo.toml  LICENSE  MAINTAINERS  Makefile  README.md  disk.tar  rust-toolchain.toml
.cargo/: config.toml
Documentation/process/: coding-style.rst
arch/arm64/: Cargo.toml  build.rs
arch/arm64/src/: boot.S  context.S  context.rs  cpu.rs  exception.S  exception.rs  gic.rs  lib.rs  mmu.rs  timer.rs  uart.rs
disk_root/: hello  hello.txt  readme.md  version
kernel/: Cargo.toml
kernel/src/: fs.rs  linker.ld  loader.rs  main.rs  shell.rs
kernel/src/sched/: mod.rs
scripts/: qemu-run.sh
user/hello/: Cargo.toml
user/hello/src/: main.rs
user/lib/: Cargo.toml
user/lib/src/: lib.rs
