# =============================================================================
# APRK OS - ARM64 Architecture Crate
# =============================================================================
# Architecture-specific code for AArch64
# =============================================================================

[package]
name = "aprk-arch-arm64"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spin.workspace = true

[build-dependencies]
cc = "1.0"
